fix footer and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@
 img{
     max-width: 100%;
 }
+section{
+    padding: 3rem 0;
+}
 
 /* utilities */
 .d-flex{
@@ -380,6 +383,9 @@ footer{
     background-color: var(--db-dark);
     color: var(--db-light);
     padding: 2rem 0;
+    .sp-btw{
+        justify-content: space-between;
+    }
     h4{
         margin-bottom: 1.5rem;
     }
